Separate Home and About pages

--- a/blog/BUILD
+++ b/blog/BUILD
@@ -4,18 +4,31 @@ load("@web_compiler//:compiler.bzl", "document", "site")
 document(
     name = "about",
     main = "about.xml",
+    srcs = [
+        # TODO: Make this implicit
+        "@web_compiler//backend/swiss:nav_buttons",
+        "@web_compiler//backend/swiss:style",
+    ],
+)
+
+document(
+    name = "home",
+    main = "home.xml",
+    srcs = [
+        # TODO: Make this implicit
+        "@web_compiler//backend/swiss:nav_buttons",
+        "@web_compiler//backend/swiss:style",
+    ],
 )
 
 site(
     name = "blog",
     srcs = [
         ":about",
-        # TODO: Make this implicit
-        "@web_compiler//backend/swiss:nav_buttons",
-        "@web_compiler//backend/swiss:style",
+        ":home",
     ],
     build_info = "//bazel:build_info",
-    index = ":about",
+    index = ":home",
     nav = "nav.xml",
     output_root = "blog",
 )
